--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_expandable_table: ^2.0.0
+  flutter_riverpod: ^2.3.6
   flutter_svg: ^2.0.6
   go_router: ^8.0.0
 
